Atualizações do sobre e projetos

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
   <div class="main-projects">
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/potter.png" class="card-bs-img-top" alt="Potterpedia">
+      <img src="/assets/potter.png" class="card-bs-img-top image" alt="Potterpedia">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Potterpedia</h3>
         <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços,
@@ -36,7 +36,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/pokedex.png" class="card-bs-img-top" alt="Pokédex">
+      <img src="/assets/pokedex.png" class="card-bs-img-top image" alt="Pokédex">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Pokédex</h3>
         <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é
@@ -50,7 +50,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/spiderman.png" class="card-bs-img-top" alt="Multiverso Spiderman">
+      <img src="/assets/spiderman.png" class="card-bs-img-top image" alt="Multiverso Spiderman">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Multiverso Spiderman</h3>
         <p class="card-bs-text">Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas
@@ -65,7 +65,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/crs.png" class="card-bs-img-top" alt="Campos RockShop">
+      <img src="/assets/crs.png" class="card-bs-img-top image" alt="Campos RockShop">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Campos RockShop!</h3>
         <p class="card-bs-text">Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram
@@ -79,7 +79,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/cookenu.png" class="card-bs-img-top" alt="Cookenu">
+      <img src="/assets/cookenu.png" class="card-bs-img-top image" alt="Cookenu">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Cookenu</h3>
         <p class="card-bs-text">Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas
@@ -94,7 +94,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/your-trip.png" class="card-bs-img-top" alt="Your Trip">
+      <img src="/assets/your-trip.png" class="card-bs-img-top image" alt="Your Trip">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Your Trip</h3>
         <p class="card-bs-text">Site de venda de pacotes de viagem. Foi criado utilizando HTML e Bootstrap.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/techcampos.png" class="card-bs-img-top" alt="TechCampos">
+      <img src="/assets/techcampos.png" class="card-bs-img-top image" alt="TechCampos">
       <div class="card-bs-body">
         <h3 class="card-bs-title">TechCampos</h3>
         <p class="card-bs-text">Simulador de um carrinho de compras de um site de venda de produtos voltados à
@@ -122,15 +122,13 @@
 
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/labescola.png" class="card-bs-img-top" alt="LabEscola">
+      <img src="/assets/logo-1.png" class="card-bs-img-top image" alt="LabEscola">
       <div class="card-bs-body">
-        <h3 class="card-bs-title">LabEscola</h3>
-        <p class="card-bs-text">Site que simula uma escola de programação. Nele é possível buscar por cursos, alunos e
-          turmas. Também é possível cadastrar novos cursos, matricular novos alunos e fazer simulações de compra de
-          cursos. Site criado com HTML, CSS e JavaScript.</p>
+        <h3 class="card-bs-title">Labeddit</h3>
+        <p class="card-bs-text">Projeto fullstack mobile-first de um site que simula uma rede social no estilo Reddit. Este projeto foi criado com React.js, JavaScript (frontend), TypeScript(backend), Node.js, Express, SQLite, além de Orientação a Objetos e Arquitetura em Camadas.</p>
         <div style="margin-top: -1vh;">
-          <a href="https://sable-steam.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
-          <a href="https://github.com/carolcampos22/projeto-intro-web-js" class="btn btn-primary" target="_blank">Ir
+          <a href="https://labeddit-frontend-delta.vercel.app" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/labeddit-frontend" class="btn btn-primary" target="_blank">Ir
             para repositório no GitHub</a>
         </div>
       </div>
@@ -140,7 +138,7 @@
 </body>
 <footer class="footer">
   <p>Carolina Mendes</p>
-  <p>&copy; 2023</p>
+  <p>&copy; 2024</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
