Atualização de informações e de estilização

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="container-data-img">
             <div>
                 <h1>Carolina Mendes</h1>
-                <h2>Front-End developer</h2>
+                <h2>Frontend developer</h2>
                 <div class="social-media">
-                    <a href="https://www.linkedin.com/in/dev-carolina-mendes-campos/" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/dev-carolina-mendes/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/carolcampos22" target="_blank">GitHub</a>
                 </div>
             </div>
@@ -54,6 +54,23 @@
     </header>
 
     <main class="container">
+
+        <div class="card-container">
+            <a href="https://pizzaria-app-seven.vercel.app/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Pizza</h1>
+                        <h1>Palooza</h1>
+                        <p>Vem ver!</p>
+                    </div>
+                </div>
+            </a>
+            <div class="card-text">
+                <p>
+                <p>Pizzaria online onde o cliente pode se cadastrar, visualizar o cardápio e adicionar produtos ao carrinho. Foi criado com React.js, JavaScript e Tailwind CSS. </p>
+                </p>
+            </div>
+        </div>
         <div class="card-container">
             <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" target="_blank">
                 <div class="card">
@@ -99,23 +116,6 @@
                 <p>Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram HTML, CSS, JavaScript e Bootstrap. </p>
             </div>
         </div>
-
-        <div class="card-container">
-            <a href="https://spooky-bone.surge.sh/" target="_blank">
-                <div class="card">
-                    <div class="card-wrapper">
-                        <h1>Cookenu</h1>
-                        <p>Vem ver!</p>
-                    </div>
-                </div>
-            </a>
-            <div class="card-text">
-                <p>
-                <p>Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas disponíveis e seus detalhes, além de adicionar novas receitas. Site criado utilizando React, Styled-Components e API REST. </p>
-                </p>
-            </div>
-        </div>
-
 
         <div class="card-container">
             <a href="/projects.html">
