--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,19 @@
   <div class="main-projects">
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/homepage-pizzapalooza.png" class="card-bs-img-top image" alt="TechCampos">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">PizzaPalooza</h3>
+        <p class="card-bs-text">Pizzaria online onde o cliente pode se cadastrar, visualizar o cardápio e adicionar produtos ao carrinho. Foi criado com React.js, JavaScript e Tailwind CSS.</p>
+        <div style="margin-top: 8vh;">
+          <a href="https://pizzaria-app-seven.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/pizzaria-app" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a> 
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
       <img src="/assets/potter.png" class="card-bs-img-top image" alt="Potterpedia">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Potterpedia</h3>
@@ -41,7 +54,7 @@
         <h3 class="card-bs-title">Pokédex</h3>
         <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é
           possível visualizar os Pokémon, fazer busca e ir para para a página de detalhes.</p>
-        <div style="margin-top: 8vh;">
+        <div style="margin-top: 6vh;">
           <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para
             repositório no GitHub</a>
@@ -56,7 +69,7 @@
         <p class="card-bs-text">Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas
           versões possuem páginas para cada um de seus filmes, com trailers e fotos. O projeto foi criado utitlizando
           HTML, CSS e JavaScript.</p>
-        <div style="margin-top: 3vh;">
+        <div style="margin-top: 1vh;">
           <a href="https://dependent-thumb.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/projeto-multiverso-spiderman" target="_blank"
             class="btn btn-primary">Ir para repositório no GitHub</a>
@@ -70,7 +83,7 @@
         <h3 class="card-bs-title">Campos RockShop!</h3>
         <p class="card-bs-text">Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram
           HTML, CSS, JavaScript e Bootstrap.</p>
-        <div style="margin-top: 11vh;">
+        <div style="margin-top: 12vh;">
           <a href="https://campos-rock-shop.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/projeto-html-css-bootstrap-descomplica" class="btn btn-primary"
             target="_blank">Ir para repositório no GitHub</a>
@@ -98,7 +111,7 @@
       <div class="card-bs-body">
         <h3 class="card-bs-title">Your Trip</h3>
         <p class="card-bs-text">Site de venda de pacotes de viagem. Foi criado utilizando HTML e Bootstrap.</p>
-        <div style="margin-top: 13vh;">
+        <div style="margin-top: 17vh;">
           <a href="https://coherent-passenger.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/projeto-your-trip" target="_blank" class="btn btn-primary">Ir para
             repositório no GitHub</a>
@@ -106,27 +119,13 @@
       </div>
     </div>
 
-    <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/techcampos.png" class="card-bs-img-top image" alt="TechCampos">
-      <div class="card-bs-body">
-        <h3 class="card-bs-title">TechCampos</h3>
-        <p class="card-bs-text">Simulador de um carrinho de compras de um site de venda de produtos voltados à
-          tecnologia. Foi criado com React.js e styled-components.</p>
-        <div style="margin-top: 8vh;">
-          <a href="https://techno-campos.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
-          <a href="https://github.com/carolcampos22/projeto-js-react" class="btn btn-primary" target="_blank">Ir para
-            repositório no GitHub</a>
-        </div>
-      </div>
-    </div>
-
-
+    
     <div class="card-bs" style="width: 18rem; height: 30em;">
       <img src="/assets/logo-1.png" class="card-bs-img-top image" alt="LabEscola">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Labeddit</h3>
-        <p class="card-bs-text">Projeto fullstack mobile-first de um site que simula uma rede social no estilo Reddit. Este projeto foi criado com React.js, JavaScript (frontend), TypeScript(backend), Node.js, Express, SQLite, além de Orientação a Objetos e Arquitetura em Camadas.</p>
-        <div style="margin-top: -1vh;">
+        <p class="card-bs-text">Rede social no estilo Reddit. Este projeto foi criado com React.js, JavaScript e Styled-components.</p>
+        <div style="margin-top: 14vh;">
           <a href="https://labeddit-frontend-delta.vercel.app" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/labeddit-frontend" class="btn btn-primary" target="_blank">Ir
             para repositório no GitHub</a>
