Opção de download de currículo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/svg" href="./assets/journals.svg">
     <title>Portfólio - Carolina Mendes</title>
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -45,6 +46,9 @@
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/dev-carolina-mendes/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/carolcampos22" target="_blank">GitHub</a>
+                </div>
+                <div id="div-cv">
+                    <a id="link-cv" href="./assets/docs/Carolina Mendes Campos - Front-end.pdf" download="Carolina Mendes Campos - Front-end.pdf"><button id="cv">Baixe meu currículo!</button></a>
                 </div>
             </div>
             <div class="perfil-img">
