Adição de contato por WA

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                 <p> Clique para ver todos os projetos! </p>
             </div>
         </div>
+
+        <a href="https://wa.me/5521970686445" target="_blank"><img id="logo-whatsapp" src="./assets/logos_whatsapp-icon.png" alt="Logo do WhatsApp"/></a>
+
     </main>
 
     <footer class="footer">
