--- a/projects.html
+++ b/projects.html
@@ -134,6 +134,9 @@
     </div>
 
   </div>
+  
+  <a href="https://wa.me/5521970686445" target="_blank"><img id="logo-whatsapp" src="./assets/logos_whatsapp-icon.png" alt="Logo do WhatsApp"/></a>
+  
 </body>
 <footer class="footer">
   <p>Carolina Mendes</p>
