--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 
     </div>
 
+    <a href="https://wa.me/5521970686445" target="_blank"><img id="logo-whatsapp" src="./assets/logos_whatsapp-icon.png" alt="Logo do WhatsApp"/></a>
 
   </main>
 
