Melhorias na responsividade

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <a href="https://github.com/carolcampos22" target="_blank">GitHub</a>
                 </div>
                 <div id="div-cv">
-                    <a id="link-cv" href="./assets/docs/Carolina Mendes Campos - Front-end.pdf" download="Carolina Mendes Campos - Front-end.pdf"><button id="cv">Baixe meu currículo!</button></a>
+                    <a id="link-cv" href="./assets/docs/Carolina Mendes Campos - Front-end.pdf" download="Carolina Mendes Campos - Front-end.pdf">Baixe meu currículo!</a>
                 </div>
             </div>
             <div class="perfil-img">
-                <img src="./assets/perfil.png"/>
+                <img src="./assets/carolina-m-campos.jpg"/>
             </div>
         </div>
     </header>
