Adição de novo projeto

--- a/projects.html
+++ b/projects.html
@@ -21,13 +21,27 @@
   <div class="main-projects">
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/homepage-pizzapalooza.png" class="card-bs-img-top image" alt="TechCampos">
+      <img src="/assets/homepage-pizzapalooza.png" class="card-bs-img-top image" alt="PizzaPalooza">
       <div class="card-bs-body">
         <h3 class="card-bs-title">PizzaPalooza</h3>
         <p class="card-bs-text">Pizzaria online onde o cliente pode se cadastrar, visualizar o cardápio e adicionar produtos ao carrinho. Foi criado com React.js, JavaScript e Tailwind CSS.</p>
         <div style="margin-top: 8vh;">
           <a href="https://pizzaria-app-seven.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/pizzaria-app" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a> 
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/home-porta-premiada.png" class="card-bs-img-top image" alt="Porta Premiada">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Porta Premiada</h3>
+        <p class="card-bs-text">Este é um jogo simples baseado no famoso problema de Monty Hall desenvolvido com React.js, Next.js, TypeScript e CSS Modules.
+        </p>
+        <div style="margin-top: 11vh;">
+          <a href="https://porta-premiada-pied.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/porta-premiada" class="btn btn-primary" target="_blank">Ir para
             repositório no GitHub</a> 
         </div>
       </div>
@@ -120,7 +134,7 @@
     </div>
 
     
-    <div class="card-bs" style="width: 18rem; height: 30em;">
+    <!-- <div class="card-bs" style="width: 18rem; height: 30em;">
       <img src="/assets/logo-1.png" class="card-bs-img-top image" alt="LabEscola">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Labeddit</h3>
@@ -131,7 +145,7 @@
             para repositório no GitHub</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
   
