--- a/projects.html
+++ b/projects.html
@@ -134,18 +134,18 @@
     </div>
 
     
-    <!-- <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/logo-1.png" class="card-bs-img-top image" alt="LabEscola">
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/chattebox-home.png" class="card-bs-img-top image" alt="LabEscola">
       <div class="card-bs-body">
-        <h3 class="card-bs-title">Labeddit</h3>
-        <p class="card-bs-text">Rede social no estilo Reddit. Este projeto foi criado com React.js, JavaScript e Styled-components.</p>
+        <h3 class="card-bs-title">Chatterbox Tech</h3>
+        <p class="card-bs-text">Rede social sobre tecnologia. Projeto em desenvolcimento criado com React.js, JavaScript e Styled-components.</p>
         <div style="margin-top: 14vh;">
-          <a href="https://labeddit-frontend-delta.vercel.app" class="btn btn-primary" target="_blank">Visitar página</a><br />
-          <a href="https://github.com/carolcampos22/labeddit-frontend" class="btn btn-primary" target="_blank">Ir
+          <!-- <a href="https://labeddit-frontend-delta.vercel.app" class="btn btn-primary" target="_blank">Visitar página</a><br /> -->
+          <a href="https://github.com/carolcampos22/chatterbox-frontend" class="btn btn-primary" target="_blank">Ir
             para repositório no GitHub</a>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
   
