adição de link do site de um projeto

--- a/projects.html
+++ b/projects.html
@@ -132,15 +132,14 @@
         </div>
       </div>
     </div>
-
     
     <div class="card-bs" style="width: 18rem; height: 30em;">
       <img src="/assets/chattebox-home.png" class="card-bs-img-top image" alt="LabEscola">
       <div class="card-bs-body">
         <h3 class="card-bs-title">Chatterbox Tech</h3>
-        <p class="card-bs-text">Rede social sobre tecnologia. Projeto em desenvolcimento criado com React.js, JavaScript e Styled-components.</p>
-        <div style="margin-top: 14vh;">
-          <!-- <a href="https://labeddit-frontend-delta.vercel.app" class="btn btn-primary" target="_blank">Visitar página</a><br /> -->
+        <p class="card-bs-text">Rede social sobre tecnologia. Projeto, em desenvolvimento, criado com React.js, JavaScript e Styled-components.</p>
+        <div style="margin-top: 12vh;">
+          <a href="https://chatterbox-frontend-eight.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/chatterbox-frontend" class="btn btn-primary" target="_blank">Ir
             para repositório no GitHub</a>
         </div>
