Adição de novos projetos

--- a/projects.html
+++ b/projects.html
@@ -24,16 +24,47 @@
       <img src="/assets/homepage-pizzapalooza.png" class="card-bs-img-top image" alt="PizzaPalooza">
       <div class="card-bs-body">
         <h3 class="card-bs-title">PizzaPalooza</h3>
-        <p class="card-bs-text">Pizzaria online onde o cliente pode se cadastrar, visualizar o cardápio e adicionar produtos ao carrinho. Foi criado com React.js, JavaScript e Tailwind CSS.</p>
+        <p class="card-bs-text">Pizzaria online onde o cliente pode se cadastrar, visualizar o cardápio e adicionar
+          produtos ao carrinho. Foi criado com React.js, JavaScript e Tailwind CSS.</p>
         <div style="margin-top: 8vh;">
-          <a href="https://pizzaria-app-seven.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://pizzaria-app-seven.vercel.app/" class="btn btn-primary" target="_blank">Visitar
+            página</a><br />
           <a href="https://github.com/carolcampos22/pizzaria-app" class="btn btn-primary" target="_blank">Ir para
-            repositório no GitHub</a> 
+            repositório no GitHub</a>
         </div>
       </div>
     </div>
 
-    
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/chattebox-home.png" class="card-bs-img-top image" alt="LabEscola">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Chatterbox Tech</h3>
+        <p class="card-bs-text">Rede social sobre tecnologia. Projeto, em desenvolvimento, criado com React.js,
+          JavaScript e Styled-components.</p>
+        <div style="margin-top: 12vh;">
+          <a href="https://chatterbox-frontend-eight.vercel.app/" class="btn btn-primary" target="_blank">Visitar
+            página</a><br />
+          <a href="https://github.com/carolcampos22/chatterbox-frontend" class="btn btn-primary" target="_blank">Ir
+            para repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/prints/uptask.png" class="card-bs-img-top image" alt="UpTask">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">UpTask</h3>
+        <p class="card-bs-text">Uma lista de tarefas simples, construída com Next.js, utilizando SCSS para estilização e
+          LocalStorage para persistência de dados.</p>
+        <div style="margin-top: 8vh;">
+          <a href="https://to-do-list-app-gamma-gules.vercel.app/" class="btn btn-primary" target="_blank">Visitar
+            página</a><br />
+          <a href="https://github.com/carolcampos22/to-do-list-app?tab=readme-ov-file" class="btn btn-primary"
+            target="_blank">Ir para
+            repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
       <img src="/assets/potter.png" class="card-bs-img-top image" alt="Potterpedia">
@@ -42,12 +73,28 @@
         <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços,
           utilizando a HP-API. Projeto em desenvolvimento, criado com React.js, API Rest e styled-components.</p>
         <div style="margin-top: 5vh;">
-         <a href="https://potterpedia-ebon.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br /> 
+          <a href="https://potterpedia-ebon.vercel.app/" class="btn btn-primary" target="_blank">Visitar
+            página</a><br />
           <a href="https://github.com/carolcampos22/projeto-potter" class="btn btn-primary" target="_blank">Ir para
             repositório no GitHub</a>
         </div>
       </div>
 
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/prints/devescola.png" class="card-bs-img-top image" alt="UpTask">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">DevEscola</h3>
+        <p class="card-bs-text">Site de uma escola de programação onde é possível matricular novos alunos, pesquisar
+          cursos e alunos matriculados e fazer simulações de compras de cursos.</p>
+        <div style="margin-top: 8vh;">
+          <a href="https://devschool-chi.vercel.app/" class="btn btn-primary" target="_blank">Visitar
+            página</a><br />
+          <a href="https://github.com/carolcampos22/dev-escola" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a>
+        </div>
+      </div>
     </div>
 
     <div class="card-bs" style="width: 18rem; height: 30em;">
@@ -57,7 +104,8 @@
         <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é
           possível visualizar os Pokémon, fazer busca e ir para para a página de detalhes.</p>
         <div style="margin-top: 6vh;">
-          <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" class="btn btn-primary"
+            target="_blank">Visitar página</a><br />
           <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para
             repositório no GitHub</a>
         </div>
@@ -93,28 +141,18 @@
       </div>
     </div>
 
-    
-    <div class="card-bs" style="width: 18rem; height: 30em;">
-      <img src="/assets/chattebox-home.png" class="card-bs-img-top image" alt="LabEscola">
-      <div class="card-bs-body">
-        <h3 class="card-bs-title">Chatterbox Tech</h3>
-        <p class="card-bs-text">Rede social sobre tecnologia. Projeto, em desenvolvimento, criado com React.js, JavaScript e Styled-components.</p>
-        <div style="margin-top: 12vh;">
-          <a href="https://chatterbox-frontend-eight.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
-          <a href="https://github.com/carolcampos22/chatterbox-frontend" class="btn btn-primary" target="_blank">Ir
-            para repositório no GitHub</a>
-        </div>
-      </div>
-    </div>
+
+
 
   </div>
-  
-  <a href="https://wa.me/5521970686445" target="_blank"><img id="logo-whatsapp" src="./assets/logos_whatsapp-icon.png" alt="Logo do WhatsApp"/></a>
-  
+
+  <a href="https://wa.me/5521970686445" target="_blank"><img id="logo-whatsapp" src="./assets/logos_whatsapp-icon.png"
+      alt="Logo do WhatsApp" /></a>
+
 </body>
 <footer class="footer">
   <p>Carolina Mendes</p>
-  <p>&copy; 2024</p>
+  <p>&copy; 2025</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
